# Zane

./: .gitignore  CMakeLists.txt  build.sh
cpp/: detector.cpp
data/: agents.json
grammer/: zane.jsgf
include/: agent.h  command.h  detector.h  response.h  sphinx.h
samples/: constpchar  constpchar.cpp
src/: agent.cpp  detector.cpp  zane.cpp
